[tool.poetry]
name = "selective-bot"
version = "0.1.0"
description = ""
authors = ["Ricardo <ricardo.olalquiaga@sansano.usm.cl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
discord = "^2.3.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
